# script-rust

./: Cargo.toml  README.md  cross_build.cmd  cross_build.sh
.cargo/: config.toml
script/build-script-service/: build-script-service-aarch64-linux-gnu  build-script-service-aarch64-linux-musl  build-script-service-x86_64-linux-gnu  build-script-service.yaml
script/demo/: demo.yaml
script/toolchains-release/: toolchains-release-aarch64-linux-gnu  toolchains-release-aarch64-linux-musl  toolchains-release-x86_64-linux-gnu
src/: script-rust.rs
src/application/: Application.rs  ApplicationTest.rs  mod.rs
src/application/applet/: mod.rs
src/application/applet/Demo/: Demo.rs  mod.rs
src/application/applet/ToolchainsRelease/: ToolchainsRelease.rs  mod.rs
src/application/applet/ToolchainsRelease/pojo/: mod.rs
src/application/applet/ToolchainsRelease/pojo/po/: ToolchainInfo.rs  mod.rs
src/application/config/: Global.rs  mod.rs
src/application/deploy/: mod.rs
src/application/deploy/pojo/: mod.rs
src/application/deploy/pojo/dto/: BuildConfig.rs  mod.rs
src/application/deploy/pojo/po/: ArchInfo.rs  CompilationTypeInfo.rs  OsInfo.rs  Script.rs  mod.rs
src/application/deploy/service/BuildScriptService/: BuildScriptService.rs  mod.rs
src/application/pojo/dto/: Log.rs  mod.rs
src/application/util/: DataUtil.rs  FileUtil.rs  GenUtil.rs  LogUtil.rs  PromptUtil.rs  RemoteUtil.rs  mod.rs
src/assets/: build-script-service.yaml  toolchains-release.yaml
