[package]
name = "script_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "script_rust"
path = "src/script-rust.rs"

[dependencies]
lazy_static = "1.5.0"
mime_guess = "2.0.5"
regex = "1.11.1"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde = { version = "1.0.215", features = ["derive"] }
